[gd_scene load_steps=16 format=2]

[ext_resource path="res://asserts/art/Book.png" type="Texture" id=1]
[ext_resource path="res://asserts/art/SaveBackground.png" type="Texture" id=2]
[ext_resource path="res://asserts/themes/标题字体.tres" type="Theme" id=3]
[ext_resource path="res://asserts/themes/正文字体.tres" type="Theme" id=4]
[ext_resource path="res://SaveList.gd" type="Script" id=5]
[ext_resource path="res://SaveMenu.gd" type="Script" id=6]
[ext_resource path="res://asserts/art/hoverBox.png" type="Texture" id=7]
[ext_resource path="res://asserts/art/downArrow.png" type="Texture" id=8]
[ext_resource path="res://asserts/themes/小号正文字体.tres" type="Theme" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="SaveMenu" type="Control"]
script = ExtResource( 6 )

[node name="SaveBackground" type="TextureRect" parent="."]
margin_left = 832.0
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )
expand = true

[node name="SaveBook" type="TextureRect" parent="."]
margin_right = 824.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true

[node name="Title" type="Label" parent="."]
margin_left = 304.0
margin_top = 104.0
margin_right = 504.0
margin_bottom = 179.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
text = "加载存档"
align = 1
valign = 1

[node name="SaveList" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="ItemList" type="ItemList" parent="SaveList"]
margin_left = 129.0
margin_top = 224.0
margin_right = 704.0
margin_bottom = 960.0
theme = ExtResource( 9 )
custom_colors/guide_color = Color( 0.47451, 0.333333, 0.282353, 1 )
custom_colors/font_color = Color( 0.831373, 0.631373, 0.372549, 1 )
custom_constants/hseparation = 30
custom_styles/cursor = SubResource( 1 )
custom_styles/selected_focus = SubResource( 2 )
custom_styles/bg_focus = SubResource( 3 )
custom_styles/cursor_unfocused = SubResource( 4 )
custom_styles/selected = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_text_lines = 2
max_columns = 3
same_column_width = true

[node name="ExitArrow" type="TextureButton" parent="."]
margin_left = 880.0
margin_top = 960.0
margin_right = 1016.0
margin_bottom = 1048.0
texture_normal = ExtResource( 8 )
expand = true

[node name="ExitHoverBox" type="TextureRect" parent="."]
margin_left = 872.0
margin_top = 896.0
margin_right = 1024.0
margin_bottom = 944.0
texture = ExtResource( 7 )
expand = true

[node name="ExitHoverText" type="Label" parent="ExitHoverBox"]
margin_left = 8.0
margin_right = 144.0
margin_bottom = 48.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
text = "返回主菜单"
align = 1
valign = 1
